--- a/FrontendNew/src/app/admin-approval/admin-approval.component.html
+++ b/FrontendNew/src/app/admin-approval/admin-approval.component.html
@@ -19,18 +19,13 @@
           <th scope="col">Aadhar Number</th>
           <th scope="col"> Date Of Birth</th>
           <th scope="col"> Address</th>
-          <!--<th scope="col"> Address Line2</th>
-          <th scope="col"> Landmark</th>
-          <th scope="col"> City</th>
-          <th scope="col"> State</th>
-          <th scope="col"> Pincode</th> -->
           <th scope="col"> Approved By admin</th>
           <th scope="col">Admin Remark</th>
           <th scope="col">Submit Details</th>
         </tr>
       </thead>
       <tbody>
-        <tr *ngFor="let user of users; let i=index; let num of array">
+        <tr *ngFor="let user of users">
           <td><span>{{user.userId}}</span></td>
           <td><span>{{user.title}}</span></td>
           <td><span>{{user.firstName}}</span></td>
@@ -42,19 +37,14 @@
           <td><span>{{user.aadharNumber}}</span></td>
           <td><span>{{user.dateOfBirth}}</span></td>
           <td><span>{{user.addressLine1}}<br> {{user.addressLine2}}<br>{{user.landmark}}<br>{{user.city}}<br>{{user.state}}<br>{{user.pincode}}</span></td>
-         <!-- <td><span>{{user.addressLine2}}</span></td>
-          <td><span>{{user.landmark}}</span></td>
-          <td><span>{{user.city}}</span></td>
-          <td><span>{{user.state}}</span></td>
-          <td><span>{{user.pincode}}</span></td>-->
           <td><span>
-              <select id=i name="approvedByAdmin">
-                <option value="Approved">Approved</option>
-                <option value="Decline">Decline</option>
+              <select name="approvedByAdmin" [(ngModel)]="admin.status">
+                <option value="true">Approved</option>
+                <option value="false">Decline</option>
               </select>
             </span></td>
-          <td><span><input type="text" id="remarks" name="remarks"></span></td>
-          <button class="btn btn-dark" type="button" style="margin-bottom: 20px; width: 100px;">Submit</button><br>
+          <td><span><input type="text" id="remarks" name="remarks" [(ngModel)]="admin.remarks"></span></td>
+          <button class="btn btn-dark" type="button" style="margin-bottom: 20px; width: 100px;" (click)="sendAdminRemarks(user.aadharNumber)">Submit</button><br>
         </tr>
       </tbody>
     </table>
