--- a/FrontendNew/src/app/funds-transfer/funds-transfer.component.html
+++ b/FrontendNew/src/app/funds-transfer/funds-transfer.component.html
@@ -1,1 +1,5 @@
-<p>funds-transfer works!</p>
+<div id="menu" align="center">
+    <a routerLink="/neftPayment" > <button id="menu-button" >NEFT Payment</button></a>
+    <a routerLink="/impsPayment" > <button id="menu-button">IMPS Payment</button></a>
+    <a routerLink="/rtgsPayment" > <button id="menu-button">RTGS Payment</button></a>
+</div>
