--- a/FrontendNew/src/app/login-page/login-page.component.html
+++ b/FrontendNew/src/app/login-page/login-page.component.html
@@ -23,9 +23,9 @@
             </div>
         
             <div align="center">
-               <a routerLink="/register" > <p style="font-style: italic;font-weight: bolder;">First time user? Register</p></a>
-               <a routerLink="/forgotId" > <p style="font-style: italic;font-weight: bolder;">Forgot User Id?</p></a>
-               <a routerLink="/forgotPass"> <p style="font-style: italic;font-weight: bolder;">Forgot Password?</p></a>
+               <a routerLink="/register" > <p style="font-style: italic;font-weight: bolder;; color:white ;">First time user? Register</p></a>
+               <a routerLink="/forgotId" > <p style="font-style: italic;font-weight: bolder;; color:white ;">Forgot User Id?</p></a>
+               <a routerLink="/forgotPass"> <p style="font-style: italic;font-weight: bolder; color:white ;">Forgot Password?</p></a>
             </div>
         </div>
 </form>
