--- a/FrontendNew/src/app/logout/logout.component.css
+++ b/FrontendNew/src/app/logout/logout.component.css
@@ -1,5 +1,5 @@
 .logout{
-    background-image:url("/assets/images/LogoutBG.jpg") ;
+    background-image:url("/assets/images/Forgot.jpg") ;
     background-repeat: no-repeat;
     background-size: cover;
     padding:6rem ;
