--- a/FrontendNew/src/app/logout/logout.component.html
+++ b/FrontendNew/src/app/logout/logout.component.html
@@ -1,7 +1,50 @@
+<!-- <app-header></app-header>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Logout</title>
+    <style>
+        p.solid{border-style: solid;}
+        .wrapper
+   {
+    display: flex;
+   justify-content: center;
+   margin-top: 80px;
+   color: purple;
+   margin-bottom: 100px;
+
+   }  
+    </style>
+</head>
+<body>
+    <p class="solid" style="text-align: center;">You have been Logged out</p>
+    <div class="wrapper">
+        <h3>Session Expired
+            <br/><br/>
+            
+            <br/><br/>
+            Suggesstions: For Security Resasons we have disabled back button
+        </h3>
+    </div>
+    <p style="text-align: center;"> <a routerLink="">  <button type="button" >click here to go to home page</button></a></p><br>
+    
+</body>
+</html> -->
 <app-header></app-header>
 <div class="logout">
     <div class="wrapper">
         <h2>Thankyou for visiting us!</h2>
     </div>
+
+    <div>
+        <h3 style="text-align: center; color: white;">
+            Suggesstions: For Security Resasons we have disabled back button
+        </h3>
+    </div>
+    <p style="text-align: center;"> <a routerLink="">  <button type="button" >click here to go to home page</button></a></p><br>
 </div>
+
+
 <app-footer></app-footer>
