--- a/FrontendNew/src/app/account-details/account-details.component.html
+++ b/FrontendNew/src/app/account-details/account-details.component.html
@@ -1,5 +1,5 @@
-<div align="center" style="padding:10rem;">
-
+<div class="dets">
+<div class="inn">
     <table >
  
      <tr>
@@ -22,3 +22,4 @@
     </table>
  
  </div>
+</div>
