--- a/FrontendNew/src/app/add-beneficiary/add-beneficiary.component.html
+++ b/FrontendNew/src/app/add-beneficiary/add-beneficiary.component.html
@@ -1,38 +1,39 @@
-<app-header></app-header>
+
 <div class="addBen">
-<form action="loginAdmin" method="post">
+<form (ngSubmit)="addBeneficiary()">
         <div id="login-box">
 
             <h2 align="center" style="padding-bottom: 10px;">Add New Beneficiary</h2>
         
+
             <div id="login-box-name" >Beneficiary Full Name:</div>
             <div id="login-box-field">
-                <input name="q" class="form-login" title="Username" value="" size="30" maxlength="2048" />
+                <input name="q" class="form-login" title="Username" value="" size="30" maxlength="2048" [(ngModel)]="benf.beneficiaryName" />
             </div>
          
             <div id="login-box-name">Beneficiary Account Number:</div>
             <div id="login-box-field">
                 <input name="q" type="text" class="form-login" title="Password" value="" size="30"
-                    maxlength="2048" />
+                    maxlength="2048" [(ngModel)]="benf.beneficiaryAccountnumber"/>
             </div>
            
-            <div id="login-box-name">Re-Enter Account Number:</div>
+            <div id="login-box-name">Your Account Number:</div>
             <div id="login-box-field">
-                <input name="q" type="password" class="form-login" title="Password" value="" size="30"
-                    maxlength="2048" />
+                <input name="q" type="text" class="form-login" title="Password" value="" size="30"
+                    maxlength="2048" [(ngModel)]="benf.userAccountnumber"/>
             </div>
+            
             
             <div id="login-box-name">Nick Name (for ease of access):</div>
             <div id="login-box-field">
                 <input name="q" type="text" class="form-login" title="Password" value="" size="30"
-                    maxlength="2048" />
+                    maxlength="2048" [(ngModel)]="benf.beneficiaryNickname"/>
             </div>
 
             <div align="center">
-                <button id="login-button" type="submit" value="Log In">Save as Beneficiary</button>
+                <button id="login-button" type="submit" value="submit">Save as Beneficiary</button>
             </div>
 
         </div>
 </form>
 </div>
-<app-footer></app-footer>
