--- a/FrontendNew/src/app/check-status/check-status.component.html
+++ b/FrontendNew/src/app/check-status/check-status.component.html
@@ -1,13 +1,13 @@
 <app-header></app-header>
 <div class="checkstatus">
-<form action="loginAdmin" method="post">
+<form (ngSubmit)="checkStatus()">
         <div id="login-box">
 
             <h2 align="center" style="padding-bottom: 15px;"> Registration Status</h2>
 
             <div id="login-box-name" >Refrence Id:</div>
             <div id="login-box-field">
-                <input name="q" class="form-login" title="Username" value="" size="10" maxlength="2048" />
+                <input name="q" class="form-login" title="Username" value="" size="10" maxlength="2048" [(ngModel)]="userId"/>
             </div>
             <!-- <div id="login-box-name">Password:</div>
             <div id="login-box-field">
