--- a/FrontendNew/src/app/forgot-password/forgot-password.component.html
+++ b/FrontendNew/src/app/forgot-password/forgot-password.component.html
@@ -1,19 +1,19 @@
 <app-header></app-header>
 <div class="forgotpwd">
-<form action="loginAdmin" method="post">
+<form (ngSubmit)="changePassword()">
       <div id="login-box">
 
           <h2 align="center" style="padding-bottom: 15px;">Forgot Password</h2>
 
           <div id="login-box-name">User Id:</div>
           <div id="login-box-field">
-              <input name="q" class="form-login" title="Username" value="" size="30" maxlength="2048" />
+              <input name="q" class="form-login" title="Username" value="" size="30" maxlength="2048" [(ngModel)]="creds.userId"/>
           </div>
 
-          <div id="login-box-name">OTP:</div>
+          <div id="login-box-name">New Password:</div>
           <div id="login-box-field">
               <input name="q" type="password" class="form-login" title="Password" value="" size="30"
-                  maxlength="2048" />
+                  maxlength="2048" [(ngModel)]="creds.loginPassword"/>
           </div>
 
           <div align="center">
