--- a/FrontendNew/src/app/neft-form/neft-form.component.html
+++ b/FrontendNew/src/app/neft-form/neft-form.component.html
@@ -1,45 +1,52 @@
-<app-header></app-header>
+
 <div class="neft">
-<form action="loginAdmin" method="post">
+<form (ngSubmit)="register()">
         <div id="login-box">
 
-            <h2 align="center" style="padding-bottom: 15px;">Initiate NEFT Payment</h2>
+            <h2 align="center" style="padding-bottom: 15px;">Initiate Payment</h2>
 
             <div id="login-box-name" >From Account:</div>
             <div id="login-box-field">
-                <input name="q" class="form-login" title="Username" value="" size="30" maxlength="2048" />
+                <input type="number" name="q" class="form-login" title="Username" value="" size="30" maxlength="2048" [(ngModel)]="transaction.fromAccount" />
             </div>
 
             <div id="login-box-name">To Account:</div>
             <div id="login-box-field">
-                <input name="q" type="text" class="form-login" title="Password" value="" size="30"
-                    maxlength="1024" />
-                <a href="#"><button>Add New +</button></a> 
+                <!-- <input type="number" name="q" class="form-login" title="Password" value="" size="30"
+                    maxlength="1024" [(ngModel)]="transaction.toAccount"/> -->
+                <!-- <div class="btn-group"> -->
+        <select  class="form-login" name="beneficiary" [(ngModel)]="transaction.toAccount" > 
+          <option [value] = "addto" *ngFor = "let addto of benf">{{addto}}</option>
+      </select>
             </div>
 
             <div id="login-box-name">Amount:</div>
             <div id="login-box-field">
-                <input name="q" type="password" class="form-login" title="Password" value="" size="30"
-                    maxlength="2048" />
+                <input name="q" type="number" class="form-login" title="Password" value="" size="30"
+                    maxlength="2048" [(ngModel)]="transaction.amount"/>
             </div>
 
-            <div id="login-box-name">Transaction Date:</div>
+            <div id="login-box-name">Transaction Password:</div>
             <div id="login-box-field">
-                <input name="q" type="text" class="form-login" title="Password" value="" size="30"
-                    maxlength="2048" />
+                <input name="q" type="password" class="form-login" title="Password" value="" size="30"
+                    maxlength="2048" [(ngModel)]="transaction.transactionPassword"/>
+            </div>
+            <div id="login-box-name">Transaction Mode:</div>
+            <div id="login-box-field">
+                <select class="options" [(ngModel)]="transaction.transactionMode" name="annualIncome">
+                    <option value="NEFT">NEFT </option>
+                    <option value="IMPS">IMPS</option>
+                    <option value="RTGS">RTGS</option>
+                </select>
             </div>
             
             <div id="login-box-name">Remark:</div>
             <div id="login-box-field">
                 <input name="q" type="text" class="form-login" title="Password" value="" size="30"
-                    maxlength="2048" />
+                    maxlength="2048" [(ngModel)]="transaction.remarks"/>
             </div>
             
            
-            <p>Please Note:</p>
-            <p>1. Transaction will be executed on the next working day if they are scheduled for Sundays, National Holidays, NEFT Holidays (as declared by RBI)</p>
-            <p>2. Timings for NEFT: Monday-Saturday (except 2nd and 4th Saturday) 6:00 AM - 6:30 PM.</p>
-
             <div align="center">
                 <button id="login-button" type="submit" value="Log In">Continue</button>
             </div>
@@ -47,4 +54,3 @@
 
 </form>
 </div>
-<app-footer></app-footer>
