--- a/FrontendNew/src/app/registration-page/registration-page.component.css
+++ b/FrontendNew/src/app/registration-page/registration-page.component.css
@@ -28,13 +28,13 @@ body{
     width: 40%;  
 }  
   
-input[type=text], input[type=password], textarea {  
+input[type=text], input[type=password], input[type=number],textarea {  
   width: 95%;   
   padding: 15px;
   border: none;  
   background: #f1f1f1;  
 }  
-input[type=text]:focus, input[type=password]:focus {  
+input[type=text]:focus, input[type=password]:focus, input[type=number]:focus{  
   background-color: #f1f1f1;
   color:black;
   font-size:25px;  
@@ -76,3 +76,7 @@ hr {
 .registerbtn:hover {  
   opacity: none;  
 }  
+
+.alert {
+  color: red;
+}
