--- a/FrontendNew/src/app/user-details/user-details.component.html
+++ b/FrontendNew/src/app/user-details/user-details.component.html
@@ -1,6 +1,6 @@
 
-<div align="center">
-
+<div class="dets">
+<div class="inn">
    <table >
 
     <tr>
@@ -32,4 +32,5 @@
 
    </table>
 
+</div>
 </div>
