--- a/FrontendNew/src/app/welcome-page/welcome-page.component.css
+++ b/FrontendNew/src/app/welcome-page/welcome-page.component.css
@@ -1,14 +1,13 @@
-#menu-button {
-	width:220px;
-    height: 50px;
-	margin-left:10px;
-	margin-right:10px;
-	margin-top:100px;
+#welcome {
+    border:solid;
+    margin-top:90px;
+    margin-left: 300px;
+    margin-right: 300px;
     background-color: #1e4f8a;
     color:white;
 	padding:5px;
     font-style: bold;
     font: Arial, Helvetica, sans-serif;
     text-align: center;
-	font-size:20px;
+	font-size:25px;
 }
