final changes done

--- a/FrontendNew/src/app/change-password/change-password.component.html
+++ b/FrontendNew/src/app/change-password/change-password.component.html
@@ -1,32 +1,72 @@
 
 <div class="changepwd">
-<form action="loginAdmin" method="post">
+<form (ngSubmit)="setNewPassword()" #frm="ngForm">
         <div id="login-box">
 
             <h2 align="center" style="padding-bottom: 10px;">Set New Password</h2>
 
-            <div id="login-box-name" >Login Password:</div>
-            <div id="login-box-field" >
-                <input name="q" class="form-login" title="Username" value="" size="30" maxlength="2048" />
-            </div>
-
-            <div id="login-box-name">Confirm Password:</div>
+            <div id="login-box-name">Set Login Password: </div>
             <div id="login-box-field">
-                <input name="q" type="password" class="form-login" title="Password" value="" size="30"
-                    maxlength="2048" />
-            </div>
+                <input name="lpass" type="password" required pattern="(?=.*[a-z])(?=.*[A-Z])(?=.*[0-9])(?=.*[$@$!%*?&])[A-Za-z\d$@$!%*?&].{8,}" class="form-login" #lp="ngModel" title="Password" value="" size="30"
+                    maxlength="2048" [(ngModel)]="credentials.loginPassword"/>
+                    <div *ngIf="lp?.touched && lp?.invalid" class="alert alert-danger">
+                        <div *ngIf="lp.errors?.required">
+                            Login Password is required
+                        </div>
+                        <div *ngIf="lp.errors?.pattern">
+                            Enter valid Password <br>
+                            1 uppercase, 1 lowercase, 1 special character, 1 number
+                        </div>
+                    </div>
+                </div>
+            
 
-         
-            <div id="login-box-name" >Transaction Password:</div>
+            <div id="login-box-name">Confirm Login Password: </div>
             <div id="login-box-field">
-                <input name="q" class="form-login" title="Username" value="" size="30" maxlength="2048" />
+                <input name="lpassc" type="password" required pattern="{{ lp.value }}" #lpc="ngModel" class="form-login" title="Password" value="" size="30"
+                    maxlength="2048" ngModel/>
+            
+            <div *ngIf="lpc?.touched && lpc?.invalid" class="alert alert-danger">
+                <div *ngIf="lpc.errors?.required">
+                    Login Password is required
+                </div>
+                <div *ngIf="lpc.errors?.pattern">
+                    Passwords don't match
+                </div>
             </div>
+        </div>
 
-            <div id="login-box-name">Confirm Transaction Password:</div>
+            <br/>
+            <div id="login-box-name">Set Transaction Password: </div>
             <div id="login-box-field">
-                <input name="q" type="password" class="form-login" title="Password" value="" size="30"
-                    maxlength="2048" />
+                <input name="tpass" type="password" required pattern="[0-9]{4}" #tp="ngModel" class="form-login" title="Password" value="" size="30"
+                    maxlength="2048" [(ngModel)]="credentials.transactionPassword"/>
+            
+            <div *ngIf="tp?.touched && tp?.invalid" class="alert alert-danger">
+                <div *ngIf="tp.errors?.required">
+                    Transaction Password is required
+                </div>
+                <div *ngIf="tp.errors?.pattern">
+                    Enter Valid Password <br>
+                    A 4-digit password
+                </div>
             </div>
+        </div>
+
+            <div id="login-box-name">Confirm Transaction Password: </div>
+            <div id="login-box-field">
+                <input name="tpassc" type="password" required pattern="{{ tp.value }}" class="form-login" #tpc="ngModel" title="Password" value="" size="30"
+                    maxlength="2048" ngModel/>
+            
+            <div *ngIf="tpc?.touched && tpc?.invalid" class="alert alert-danger">
+                <div *ngIf="tpc.errors?.required">
+                    Transaction Password is required
+                </div>
+                <div *ngIf="tpc.errors?.pattern">
+                    Passwords don't match
+                </div>
+            </div>
+        </div>
             
             <div align="center">
                 <button id="login-button" type="submit" value="Submit">Submit</button>
