--- a/FrontendNew/src/app/login-page/login-page.component.html
+++ b/FrontendNew/src/app/login-page/login-page.component.html
@@ -18,14 +18,14 @@
             </div>
             
             <div align="center">
-                <button id="login-button" type="submit" value="Go Home" (click)="goHome()">Home Page</button>
-                    <button id="login-button" type="submit" value="Log In" (click)="userDashboard()">Login</button>
+                <button id="login-button" value="Go Home" (click)="goHome()">Home Page</button>
+                    <button id="login-button" type="submit" value="Log In" >Login</button>
             </div>
         
             <div align="center">
                <a routerLink="/register" > <p style="font-style: italic;font-weight: bolder;; color:white ;">First time user? Register</p></a>
-               <a routerLink="/forgotId" > <p style="font-style: italic;font-weight: bolder;; color:white ;">Forgot User Id?</p></a>
-               <a routerLink="/forgotPass"> <p style="font-style: italic;font-weight: bolder; color:white ;">Forgot Password?</p></a>
+              
+               <!-- <a routerLink="/forgotPass"> <p style="font-style: italic;font-weight: bolder; color:white ;">Forgot Password?</p></a> -->
             </div>
         </div>
 </form>
