--- a/FrontendNew/src/app/admin-approval/admin-approval.component.css
+++ b/FrontendNew/src/app/admin-approval/admin-approval.component.css
@@ -11,3 +11,27 @@
     height: 40px;
     font-size: 15px;
 }
+
+#customers {
+    font-family: Arial, Helvetica, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+  }
+  
+  #customers td, #customers th {
+    border: 1px solid #ddd;
+    padding: 12px;
+    text-align: center;
+  }
+  
+  #customers tr:nth-child(even){background-color: #f2f2f2;}
+  
+  #customers tr:hover {background-color: #ddd;}
+  
+  #customers th {
+    padding-top: 12px;
+    padding-bottom: 12px;
+    text-align: center;
+    background-color: #1e4f8a;
+    color: white;
+  }
