--- a/FrontendNew/src/app/admin-approval/admin-approval.component.html
+++ b/FrontendNew/src/app/admin-approval/admin-approval.component.html
@@ -5,7 +5,7 @@
   </div>
   <br><br><br>
   <div>
-    <table class="table table-bordered table-striped">
+    <table class="table table-bordered table-striped" id="customers">
       <thead>
         <tr>
           <th scope="col"> User ID</th>
