--- a/FrontendNew/src/app/forgot-password/forgot-password.component.html
+++ b/FrontendNew/src/app/forgot-password/forgot-password.component.html
@@ -1,24 +1,18 @@
 <app-header></app-header>
 <div class="forgotpwd">
-<form (ngSubmit)="changePassword()">
+<form (ngSubmit)="sendOtp()">
       <div id="login-box">
 
           <h2 align="center" style="padding-bottom: 15px;">Forgot Password</h2>
 
           <div id="login-box-name">User Id:</div>
           <div id="login-box-field">
-              <input name="q" class="form-login" title="Username" value="" size="30" maxlength="2048" [(ngModel)]="creds.userId"/>
-          </div>
-
-          <div id="login-box-name">New Password:</div>
-          <div id="login-box-field">
-              <input name="q" type="password" class="form-login" title="Password" value="" size="30"
-                  maxlength="2048" [(ngModel)]="creds.loginPassword"/>
+              <input name="q" class="form-login" title="Username" value="" size="30" maxlength="2048" [(ngModel)]="userId"/>
           </div>
 
           <div align="center">
-              <button id="login-button" type="submit" value="Log In">Proceed</button>
-              <button id="login-button" type="submit" value="Log In">Back</button>
+            <button id="login-button" type="submit" value="submit">Proceed</button>
+              
           </div>
 
   </div>
